# full-stack-example

./: .gitignore  LICENSE
client/: package-lock.json  package.json
server/: .gitignore  Cargo.toml  env-example
server/src/: main.rs
server/src/router/: mod.rs  rest.rs  socket.rs
server/src/router/resources/: mod.rs  new_resource.rs
