[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
serde_json = "1.0.133"
cnctd_server = "0.4.6"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
local-ip-address = "0.6.3"
sea-orm = { version = "1.1.2", features = ["runtime-tokio-native-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }
tokio-test = "0.4.4"
uuid = { version = "1.11.0", features = ["v4"] }
state = "0.6.0"
